welcome.lessons.welcome.bat.bool2.ShareDigit.scala.error
shareDigit:9: error: type mismatch;
 found   : Int(10)
 required: Boolean
    return 10
           ^